@@ -41,7 +41,7 @@ LIBECASOUND_VERSION_AGE=0
 LIBECASOUNDC_VERSION=2
 LIBECASOUNDC_VERSION_AGE=1
 LIBKVUTILS_VERSION=9
-LIBKVUTILS_VERSION_AGE=5
+LIBKVUTILS_VERSION_AGE=6
 
 AC_SUBST(LIBECASOUND_VERSION)
 AC_SUBST(LIBECASOUND_VERSION_AGE)
